# CPPDlopen

./: CMakeLists.txt  coverage.info  index-sort-f.html  index-sort-l.html  index.html  main.cpp  polygon.h  triangle.cpp
cmake/: CodeCoverage.cmake
lib/: CMakeLists.txt  dlopen.cc  dlopen.cc.func-sort-c.html  dlopen.cc.func.html  dlopen.cc.gcov.html  dlopen.h  index-sort-f.html  index-sort-l.html  index.html
samples/: CMakeLists.txt  polygon.h  sample.cc  triangle.cc
tests/: CMakeLists.txt  mock_dlopen.h  test_dlopen.cc  test_sample.cc
